--- a/html_works/register2.html
+++ b/html_works/register2.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1>After school club registeration</h1>
-    <label for="">student name</label>
-    <input type="text" name="" id=""placeholder="first">
-    <input type="text" name="" id=""placeholder="last"><br>
+   <div class="bg-light border border-dark container  w-50 p-4">
+        <label for="">student name</label>
+        <input type="text" name="" id=""placeholder="first">
+        <input type="text" name="" id=""placeholder="last"><br>
+   </div>
     <label for="">student dob</label><br>
     <input type="date"><br>
     <label for="">student grade</label>
